# runtime

./: .gitignore  AGENTS.md  AUDIT.md  Cargo.toml  LOAD_TESTING.md  Makefile  README.md  ROADMAP.md  WEB_STANDARDS_REPORT.md  install.sh
.cargo/: config.toml
.github/workflows/: ci-cd.yml
bundles/eszip/: compression-stream.pkg  documentation.pkg  error-handling.pkg  generators.pkg  hello.pkg  json-api.pkg  middleware.pkg  rate-limiting.pkg  security-headers.pkg  server-sent-events.pkg  streaming-data.pkg
bundles/snapshot/: abort-controller.pkg  basic-auth.pkg  caching.pkg  cors.pkg  data-processing.pkg  form-handling.pkg  html-page.pkg  http-request.pkg  intl-api.pkg  performance-api.pkg  preact-ssr.pkg  request-modification.pkg  transform-stream.pkg  url-redirect.pkg  urlpattern-routing.pkg  wasm.pkg  web-crypto-api.pkg  websocket.pkg
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  telemetry.rs
crates/cli/src/commands/: bundle.rs  check.rs  embedded_assert.rs  mod.rs  start.rs  test.rs  watch.rs
crates/functions/: Cargo.toml  build.rs
crates/functions/src/: connection_manager.rs  handler.rs  lib.rs  lifecycle.rs  registry.rs  snapshot.rs  types.rs
crates/functions/tests/: cloudflare_bindings.rs  cloudflare_cache.rs  cloudflare_encoding.rs  cloudflare_handlers.rs  cloudflare_networking.rs  cloudflare_nodejs.rs  isolate_boot.rs  node_crypto_streams_async_hooks.rs  node_fs_compat.rs  node_module_imports.rs  node_process_compat.rs  outgoing_proxy.rs  sandbox_security.rs  testing_library_contract.rs  timeout_and_timers.rs  watch_network_e2e.rs  web_api_compat.rs  web_api_report.rs
crates/runtime-core/: Cargo.toml
crates/runtime-core/src/: bootstrap.js  cpu_timer.rs  extensions.rs  isolate.rs  isolate_logs.rs  lib.rs  manifest.rs  module_loader.rs  permissions.rs  ssrf.rs
crates/runtime-core/src/assert/: assert.ts
crates/runtime-core/src/http/: http.ts  mod.ts  user_mod.ts
crates/runtime-core/src/node_compat/: async_hooks.ts  child_process.ts  cluster.ts  crypto.ts  dgram.ts  diagnostics_channel.ts  dns.ts  events.ts  fs.ts  fs_promises.ts  http.ts  http2.ts  https.ts  inspector.ts  mod.ts  net.ts  os.ts  process.ts  readline.ts  repl.ts  sqlite.ts  stream.ts  test.ts  tls.ts  util.ts  vm.ts  worker_threads.ts  zlib.ts
crates/runtime-core/src/runtime_shims/: 98_global_scope_shared.js
crates/server/: Cargo.toml
crates/server/src/: admin_router.rs  body_limits.rs  bundle_signature.rs  function_route_matcher.rs  global_routing.rs  ingress_router.rs  lib.rs  router.rs  service.rs  tls.rs  trace_context.rs
docs/: FUNCTION_CONTRACT_README.md  NODE-COMPAT.md  bundle-signing.md  cli.md  debugging-vscode.md  debugging.md  egress-connection-manager.md  external-scaling-recommendations.md  function-manifest.md  high-load-capacity-fd-saturation.md  http-response-helpers.md  load_testing.md  request-reference.md  streaming-response-body.md  vfs.md  web_standards_api_report.md
examples/abort-controller/: abort-controller.ts
examples/all-methods-default/: all-methods-default.ts
examples/basic-auth/: basic-auth.ts
examples/caching/: caching.ts
examples/compression-stream/: compression-stream.ts
examples/cors/: cors.ts
examples/data-processing/: data-processing.ts
examples/documentation/: documentation.ts
examples/error-handling/: error-handling.ts
examples/form-handling/: form-handling.ts
examples/generators/: generators.ts
examples/hello/: hello.ts
examples/html-page/: html-page.ts
examples/http-request/: http-request.ts
examples/intl-api/: intl-api.ts
examples/json-api/: json-api.ts
examples/middleware/: middleware.ts
examples/performance-api/: performance-api.ts
examples/preact-ssr/: preact-ssr.ts
examples/rate-limiting/: rate-limiting.ts
examples/request-modification/: request-modification.ts
examples/restful-default/: restful-default.ts
examples/security-headers/: security-headers.ts
examples/server-sent-events/: server-sent-events.ts
examples/streaming-data/: streaming-data.ts
examples/transform-stream/: transform-stream.ts
examples/url-redirect/: url-redirect.ts
examples/urlpattern-routing/: urlpattern-routing.ts
examples/wasm/: wasm.ts
examples/web-crypto-api/: web-crypto-api.ts
examples/websocket/: websocket.ts
schemas/: function-manifest.v1.schema.json  routing-manifest.v1.schema.json
scripts/: README.md  benchmark-context-isolate-extreme.sh  bundle-eszip.sh  bundle-snapshot.sh  bundle.sh  context-isolate-extreme-load.js  deploy-and-test-eszip.sh  deploy-and-test-snapshot.sh  deploy-signed-bundle.sh  k6_1k_rps.js  load-test.js  node-crypto-benchmark.sh  quick-benchmark.sh  run-benchmarks.sh  sign-bundle.sh
tests/js/: requested_items_compat.test.ts  runner_advanced_features.test.ts  web_apis_none_deterministic.test.ts  web_apis_partial_and_none.test.ts  web_standards_report_regression.test.ts
