[workspace]
resolver = "2"
members = [
  "crates/runtime-core",
  "crates/server",
  "crates/functions",
  "crates/cli",
]

[workspace.package]
authors = ["Globo"]
edition = "2021"
license = "MIT"

[workspace.dependencies]
# --- local crates ---
runtime-core = { version = "0.1.0", path = "./crates/runtime-core" }
edge-server = { version = "0.1.0", path = "./crates/server" }
functions = { version = "0.1.0", path = "./crates/functions" }

# --- deno ecosystem (official) ---
deno_core = "0.391.0"
deno_ast = { version = "=0.53.1", features = ["transpiling"] }
deno_web = "0.269.0"
deno_webidl = "0.238.0"
deno_fetch = "0.262.0"
deno_websocket = "0.243.0"
deno_crypto = "0.252.0"
deno_net = "0.230.0"
deno_tls = "0.225.0"
deno_io = "0.148.0"
deno_permissions = "0.97.0"
deno_telemetry = "0.60.0"
# Node.js compatibility layer (required by deno_crypto for constants)
deno_node = "0.176.0"
deno_fs = "0.148.0"
deno_napi = "0.169.0"
napi_sym = "0.168.0"
# deno_process required by deno_node (but dangerous ops blocked in sandbox)
deno_process = "0.53.0"

# --- module graph ---
deno_graph = "0.107.1"
deno_path_util = "0.6.4"
deno_error = "0.7.1"
deno_semver = "0.9.1"
sys_traits = { version = "0.1.24", features = ["real", "libc"] }
# Node module resolution (for npm stub traits)
node_resolver = "0.76.0"

# --- eszip ---
eszip = "0.109.0"

# --- HTTP stack ---
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = { version = "0.1.20", features = ["tokio", "server", "server-auto", "server-graceful"] }
http = "1.0"
http-body = "1.0"
http-body-util = "0.1.2"

# --- tower middleware ---
tower = { version = "0.4.13", default-features = false, features = ["util", "timeout", "limit", "load-shed"] }
tower-http = { version = "0.6.1", features = ["trace", "cors", "compression-gzip"] }
tower-service = "0.3.2"

# --- async runtime ---
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["rt"] }

# --- TLS ---
rustls = { version = "0.23.11", default-features = false, features = ["logging", "std", "tls12", "ring"] }
rustls-pemfile = "2"
tokio-rustls = { version = "0.26.0", default-features = false, features = ["ring", "tls12"] }

# --- observability ---
opentelemetry = "0.27.0"
opentelemetry-otlp = { version = "0.27.0", default-features = false, features = ["trace", "metrics", "logs", "http-proto", "reqwest-client"] }
opentelemetry_sdk = { version = "0.27.0", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = { version = "0.27.0", features = ["semconv_experimental"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing-log", "json"] }
tracing-opentelemetry = "0.28"

# --- concurrency ---
dashmap = "5.5.3"

# --- serialization ---
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.85"
bincode = "1.3"

# --- error handling ---
anyhow = "1.0.57"
thiserror = "2.0.3"

# --- CLI ---
clap = { version = "4.5.16", features = ["cargo", "derive", "env", "string"] }

# --- utilities ---
bytes = "1.11.1"
futures-util = "0.3.30"
uuid = { version = "1.3.0", features = ["v4"] }
url = { version = "2.5", features = ["serde"] }
chrono = { version = "0.4", default-features = false, features = ["std", "serde", "clock"] }
once_cell = "1.17.1"
pin-project = "1.0.11"
async-trait = "0.1.73"
libc = "=0.2.172"
log = "0.4.20"
ctor = "0.2.6"
notify = "6.1"
regex = "1.10"
walkdir = "2.4"
sysinfo = "0.30"
glob = "0.3"
base64 = "0.22"
jsonschema = "0.29"
ipnet = "2.10"
flate2 = "1.0"

# --- cryptography ---
sha2 = "0.10"
hmac = "0.12"

[profile.release]
debug = true
lto = "thin"
