[package]
name = "runtime-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
deno_core.workspace = true
deno_web.workspace = true
deno_webidl.workspace = true
deno_fetch.workspace = true
deno_crypto.workspace = true
deno_net.workspace = true
deno_tls.workspace = true
deno_io.workspace = true
deno_permissions.workspace = true
deno_telemetry.workspace = true
deno_ast.workspace = true
deno_path_util.workspace = true
deno_error.workspace = true
sys_traits.workspace = true
# Node.js compatibility layer (required by deno_crypto)
deno_node.workspace = true
deno_fs.workspace = true
deno_napi.workspace = true
napi_sym.workspace = true
node_resolver.workspace = true
deno_semver.workspace = true
deno_process.workspace = true

eszip.workspace = true

http.workspace = true

anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
once_cell.workspace = true
url.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
futures-util.workspace = true
uuid.workspace = true
libc.workspace = true
log.workspace = true
ctor.workspace = true
base64.workspace = true
jsonschema.workspace = true
ipnet.workspace = true
chrono.workspace = true

[dev-dependencies]
deno_graph.workspace = true
