[package]
name = "edge-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
runtime-core.workspace = true
functions.workspace = true

hyper.workspace = true
hyper-util.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
tower.workspace = true
tower-http.workspace = true
tower-service.workspace = true

rustls.workspace = true
rustls-pemfile.workspace = true
tokio-rustls.workspace = true

tokio.workspace = true
tokio-util.workspace = true

tracing.workspace = true

anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
futures-util.workspace = true
pin-project.workspace = true
sysinfo.workspace = true
uuid.workspace = true
base64.workspace = true
notify.workspace = true
sha2 = "0.10"

[features]
hot-reload = ["functions/hot-reload"]

[dev-dependencies]
rcgen = "0.12"
bincode.workspace = true
deno_graph.workspace = true
deno_ast.workspace = true
eszip.workspace = true
deno_core.workspace = true
